--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,15 +29,36 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  meta: ^1.2.3
+  firebase_core: ^1.20.0
+  firebase_auth_web: ^4.2.1
+  firebase_auth: ^3.6.1
+  flutter_signin_button: ^2.0.0
+  firebase_database: ^9.0.20
+  provider: ^4.3.2+2
+  cloud_firestore: ^3.4.2
+  curved_navigation_bar: ^0.3.4
+  google_maps_flutter: ^2.1.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  barcode_scan2: ^4.2.1
+  qr_flutter: ^4.0.0
+  path_provider: ^2.0.11
+  location: ^4.4.0
+  flutter_native_splash: ^2.2.6
+  pigeon: ^3.2.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.3
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path: "assets/IconBustop.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,7 +82,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
